...
        onCreateClick = {
            cards.add(it)
            isNewTaskDialog = false

            coroutineScope.launch {
                snackBarHostState.showSnackbar(
                    message = "새로운 태스크가 추가되었습니다.",
                    withDismissAction = true,
                )
            }
        },
    )
}
...
